# LeIndex

./: $config_file  .env  .eslintrc.cjs  .gitignore  ACTION_PLAN.md  AGENTS.md  ANALYSIS_SUMMARY.md  API.md  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  CHANGES.md  CODE_OF_CONDUCT.md  CONFIG_RELOAD_IMPLEMENTATION.md  CONTRIBUTING.md  CRATE_UNIFICATION_TZAR_REVIEW_20260311.md  CRITICAL_BUG_FIX_TASK1.1.md  CROSS_PROJECT_SEARCH_IMPLEMENTATION.md  Cargo.toml  DEBUGGING_COMPLETE.md  EOF_INDEX_PROGRESS  EOF_SSE_MARKER  EXECUTIVE_SUMMARY-review-analysis-r15.md  FINAL_SUMMARY-pr-review-analysis.md  FINAL_VALIDATION_REPORT.md  GLOBAL_INDEX_MCP_INTEGRATION_ANALYSIS.md  GRACEFUL_DEGRADATION_IMPLEMENTATION.md  HANDOFF_DOCUMENT.md  HYBRID_EMBEDDING_DESIGN.md  HYBRID_PIPELINE_INTEGRATION_PLAN.md  IMPLEMENTATION_PLAN_onnx_embeddings.md  IMPLEMENTATION_PLAN_onnx_qwen_embeddings.md  IMPROVEMENTS_QUICK_REFERENCE.md  INSTALLATION.md  INSTALLATION_RUST.md  INVESTIGATION_REPORT.md  LEINDEX_COMPREHENSIVE_INVESTIGATION_REPORT.md  LEINDEX_TLDR_INTEGRATION_PLAN.md  LEPARSE_IMPLEMENTATION_SUMMARY.md  MAINTAINERS.md  (+81 more)
.cargo/: config.toml
.github/: pull_request_template.md
Rust_ref(DO_NOT_DIRECTLY_USE)/leindex/rust/: Cargo.toml
Rust_ref(DO_NOT_DIRECTLY_USE)/leindex/rust/src/: lib.rs  main.rs
Rust_ref(DO_NOT_DIRECTLY_USE)/leindex/rust/src/migrations/: mod.rs
archive/: BATCH_WRITE_IMPLEMENTATION.md  BUG_FIX_SUMMARY.md  CODE_REVIEW_REPORT.md  COMPREHENSIVE_ANALYSIS_REPORT.md  CRITICAL_FIXES_COMPLETED.md  CRITICAL_FIXES_SUMMARY.md  DEBUGGING_SUMMARY.md  DUCKDB_LOCKING_FIX_SUMMARY.md  EDGE_CASE_FIXES_SUMMARY.md  EVALUATION_FIXES_ACTION_PLAN.md  FAST_SCANNER_FIXES_IMPLEMENTATION_SUMMARY.md  FILESTATCACHE_IMPLEMENTATION.md  FILESYSTEM_SCOPE_BUG.md  FIX_VERIFICATION.txt  INSTALLER_PREVIEW.txt  INSTALLER_REDESIGN.md  INSTALLER_v1.5.0_REVISIONS.md  LEANN_SEMANTIC_SEARCH_EVALUATION.md  LEINDEXER_CODEBASE_ANALYSIS.md  LEINDEX_EVALUATION_REPORT.md  LEINDEX_MCP_EVALUATION_REPORT.md  LEINDEX_SEARCH_BUG_REPORT.md  MCP_CONFIGURATION.md  MCP_FIX_REPORT.md  MEMORY_MCP_TOOLS_QUICK_REF.md  PARALLEL_READING_IMPLEMENTATION.md  PERFORMANCE_FIX_QUICK_SUMMARY.md  PERFORMANCE_REGRESSION_FIX.md  PHASE3_INTEGRATION_TEST_FIX.md  PHASE3_REVIEW_SUMMARY.md  PHASE4_REVIEW_SUMMARY.md  PHASE5_TASK5.1_5.2_SUMMARY.md  PHASE6_1_IMPLEMENTATION_SUMMARY.md  PHASE6_2_COMPLETION_SUMMARY.md  PHASE_6.5_DOCUMENTATION_SUMMARY.md  PHASE_6.6_COMPLETION_SUMMARY.txt  PHASE_6.6_FIXES_SUMMARY.md  PHASE_6.7_COMPLETION_SUMMARY.md  PHASE_6_EVICT_UNLOADER_SUMMARY.md  PHASE_6_QUICK_REFERENCE.md  (+10 more)
archive/crates-migrated/leglobal/: Cargo.toml
archive/crates-migrated/leglobal/src/: discovery.rs  registry.rs  tools.rs
archive/crates-migrated/leparse/: Cargo.toml
archive/crates-migrated/leparse/src/: bash.rs  cpp.rs  dart.rs  debug_go_params.rs  debug_go_returns.rs  debug_rust.rs  java.rs  lua.rs  prelude.rs  ruby.rs  rust.rs  scala.rs  tests.rs
archive/crates-migrated/lephase/: Cargo.toml
archive/crates-migrated/lephase/examples/: phase_metrics.rs
archive/crates-migrated/lephase/src/: cache.rs  docs.rs  lib.rs  options.rs  phase1.rs  phase2.rs  phase5.rs  recommendations.rs
archive/crates-migrated/lephase/src/orchestrate/: engine.rs  model.rs  runner.rs
archive/crates-migrated/lephase/tests/: phase_integration.rs
benches/: edit_preview_bench.rs  phase_bench.rs  search_benchmarks.rs  simd_benchmarks.rs  text_search_bench.rs
crates/leedit/: Cargo.toml
crates/leedit/src/: lib.rs
crates/legraphe/: Cargo.toml
crates/legraphe/src/: cross_project.rs  embedding.rs  external_deps.rs  extraction.rs  lib.rs  pdg.rs  traversal.rs
crates/legraphe/tests/: import_edges_test.rs
crates/leindex-embed/: Cargo.toml  build.rs
crates/leindex-embed/src/: batch.rs  config.rs  lib.rs  model_path.rs  ort_discovery.rs  protocol.rs  provider.rs  runtime.rs  startup.rs  worker_main.rs
crates/leindex-embed/tests/: bundle_pipeline.rs  migraphx_dynamic.rs  protocol_roundtrip.rs  worker_lifecycle.rs
crates/leparse/: Cargo.toml
crates/leparse/src/: ast.rs  ast_tests.rs  bash.rs  c.rs  completeness.rs  cpp.rs  csharp.rs  dart.rs  debug_csharp_ast.rs  debug_go.rs  debug_go_params.rs  debug_lua_ast.rs  debug_rust.rs  go.rs  grammar.rs  java.rs  javascript.rs  json.rs  kotlin.rs  languages.rs  lib.rs  lua.rs  parallel.rs  php.rs  prelude.rs  python.rs  ruby.rs  rust.rs  scala.rs  swift.rs  tests.rs  traits.rs
crates/lepasserelle/: Cargo.toml
crates/lepasserelle/src/: bridge.rs  cli.rs  config.rs  errors.rs  leindex.rs  lib.rs  mcp.rs  memory.rs  registry.rs
crates/lepasserelle/src/mcp/: handlers.rs  mod.rs  protocol.rs  server.rs  sse.rs
crates/lepasserelle/tests/: integration_test.rs  mcp_stdio_e2e.rs
crates/lephase/: Cargo.toml
crates/lephase/benches/: phase_bench.rs
crates/lephase/src/: context.rs  freshness.rs  options.rs  pdg_utils.rs  phase3.rs  phase4.rs  utils.rs
crates/lephase/src/orchestrate/: context.rs  parser.rs
crates/lerecherche/: Cargo.toml
crates/lerecherche/benches/: search_benchmarks.rs  simd_benchmarks.rs
crates/lerecherche/src/: hnsw.rs  lib.rs  query.rs  ranking.rs  search.rs  semantic.rs  tiered.rs  vector.rs
crates/lerecherche/src/quantization/: distance.rs  hnsw.rs  int8.rs  int8_hnsw.rs  mod.rs  quantization.rs  serialization.rs  simd.rs  vector.rs
crates/lerecherche/src/quantization/simd/: fallback.rs  mod.rs  x86_avx2.rs
crates/lerecherche/tests/: hnsw_integration.rs
crates/leserve/: Cargo.toml
crates/leserve/src/: config.rs  error.rs  handlers.rs  responses.rs  server.rs  websocket.rs
crates/lestockage/: Cargo.toml
crates/lestockage/src/: analytics.rs  cross_project.rs  edges.rs  global_symbols.rs  lib.rs  nodes.rs  pdg_store.rs  project_metadata.rs  project_metadata.rs.bak  salsa.rs  schema.rs  turso_config.rs
crates/lestockage/tests/: cross_project_integration.rs
crates/levalidation/: Cargo.toml
crates/levalidation/src/: drift.rs  edit_change.rs  impact.rs  lib.rs  reference.rs  syntax.rs
dashboard/: .eslintrc.cjs  INTEGRATION.md  (+10 more)
tools/xtask/: Cargo.toml
tools/xtask/src/: main.rs
(+578 files in other folders)
