[package]
name = "leindex"
version = "1.8.1"
edition = "2021"
rust-version = "1.75"
authors = ["LeIndex Contributors"]
description = "LeIndex MCP and semantic code search engine for AI tools and large codebases"
documentation = "https://docs.rs/leindex"
readme = "README.md"
homepage = "https://github.com/scooter-lacroix/LeIndex"
repository = "https://github.com/scooter-lacroix/LeIndex.git"
license = "MIT OR Apache-2.0"
keywords = [
    "search",
    "code",
    "semantic",
    "indexing",
    "language-server",
]
categories = [
    "development-tools",
    "text-processing",
    "data-structures",
    "algorithms",
]
include = [
    "/src/lib.rs",
    "/src/bin/**",
    "/src/cli/**",
    "/src/edit/**",
    "/src/global/**",
    "/src/graph/**",
    "/src/parse/**",
    "/src/phase/**",
    "/src/search/**",
    "/src/server/**",
    "/src/storage/**",
    "/src/validation/**",
    "/tests/**",
    "/benches/**",
    "/Cargo.toml",
    "/Cargo.lock",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE",
    "/leindex.jpeg",
    "/docs/MCP.md",
    "/docs/TOOL_SUPREMACY_BENCHMARKS.md",
]

# Note: ONNX models (models/*.onnx) will be added to includes when R15 model conversion is complete
# See docs/R15_MODEL_DISTRIBUTION.md for the complete model distribution strategy

[features]
default = ["full"]

# Full feature set - everything included
full = [
    "parse",
    "graph",
    "storage",
    "search",
    "phase",
    "cli",
    "global",
    "server",
    "edit",
    "validation",
]

# Minimal feature set (parsing and search only)
minimal = ["parse", "search"]

# Individual modules (follows dependency DAG)
# Parse is base, no internal dependencies
parse = [
    "dep:tree-sitter",
    "dep:tree-sitter-python",
    "dep:tree-sitter-javascript",
    "dep:tree-sitter-typescript",
    "dep:tree-sitter-go",
    "dep:tree-sitter-rust",
    "dep:tree-sitter-java",
    "dep:tree-sitter-cpp",
    "dep:tree-sitter-c-sharp",
    "dep:tree-sitter-ruby",
    "dep:tree-sitter-php",
    "dep:tree-sitter-c",
    "dep:tree-sitter-bash",
    "dep:tree-sitter-json",
    "dep:tree-sitter-lua",
    "dep:tree-sitter-scala",
    # "dep:tree-sitter-kotlin",  # Disabled due to tree-sitter version conflict
    # "dep:tree-sitter-swift",   # Disabled due to tree-sitter version conflict
    # "dep:tree-sitter-dart",    # Disabled due to tree-sitter version conflict
    "dep:rayon",
    "dep:once_cell",
]

# Graph depends on parse
graph = ["parse", "dep:petgraph"]

# Storage depends on parse and graph
storage = [
    "parse",
    "graph",
    "dep:rusqlite",
]

# Search depends on parse and graph
search = [
    "parse",
    "graph",
    "dep:regex",
    "dep:hnsw_rs",
    "dep:lru",
    "dep:bytemuck",
    "dep:wide",
    "dep:unicode-normalization",
    "dep:memmap2",
    "dep:reqwest",
    "dep:async-trait",
]

# Phase depends on parse, graph, search, storage
phase = [
    "parse",
    "graph",
    "search",
    "storage",
    "dep:walkdir",
]

# CLI depends on all core modules
cli = [
    "parse",
    "graph",
    "search",
    "storage",
    "phase",
    "edit",
    "mcp-server",
    "dep:clap",
    "dep:toml",
    "dep:walkdir",
    "dep:dirs",
    "dep:notify",
    "dep:sysinfo",
    "dep:diffy",
    "dep:dialoguer",
]

# MCP server feature for CLI
mcp-server = [
    "dep:axum",
    "dep:tower",
    "dep:tower-http",
    "dep:tokio-stream",
    "dep:futures-util",
    "dep:bytes",
    "dep:futures",
]

# Global depends on storage
global = [
    "storage",
    "dep:walkdir",
    "dep:notify",
]

# Server depends on storage, graph, search
server = [
    "storage",
    "graph",
    "search",
    "dep:axum",
    "dep:tower",
    "dep:tower-http",
    "dep:futures",
    "dep:tokio-tungstenite",
    "dep:walkdir",
]

# Edit depends on storage, graph, parse
edit = [
    "storage",
    "graph",
    "parse",
    "dep:diffy",
    "dep:tempfile",
]

# Validation depends on parse, storage, graph
validation = [
    "parse",
    "storage",
    "graph",
]

# Turso/libsql remote storage support (opt-in, off by default)
# Use with: cargo build --features "full turso"
turso = ["dep:libsql", "dep:rusqlite_migration"]

# Neural embeddings with ONNX Runtime and tokenizers
# Opt-in feature: R15 - True neural embeddings with cross-language support
# Use with: cargo build --features onnx
# Default model: Qwen3-Embedding-0.6B (~300MB) - user-specified
# Reranker: Qwen3-Reranker-0.6B (~300MB) - optional quality improvement
#
# VAL-CPHASE-002: The main crate no longer owns ONNX runtime deps directly.
# ONNX inference is delegated to the leindex-embed worker process.
onnx = ["search", "dep:leindex-embed", "dep:which"]

# AMD GPU acceleration via MIGraphX (requires ROCm installed).
# MIGraphX is the modern replacement for the deprecated ROCmExecutionProvider.
# Use with: cargo build --features onnx-migraphx
onnx-migraphx = ["onnx", "leindex-embed/onnx-migraphx"]

# Remote embedding API support (OpenAI, etc.)
# Opt-in feature: Use cloud-based embedding services instead of local models
# Use with: cargo build --features "remote-embeddings"
# Note: Requires onnx feature for remote embedding providers
remote-embeddings = ["search", "onnx", "dep:reqwest", "dep:async-trait"]

# Deep heap profiling support (opt-in, build-time gated).
#
# Enables jemalloc heap profiling via the `jemalloc` allocator with profiling
# enabled. Default builds and CI are unaffected when this feature is not
# requested.
#
# Use with: cargo build --features memprof
# VAL-MEASURE-025: memprof is opt-in and build-time gated.
# VAL-MEASURE-026: Building with --features memprof succeeds.
# VAL-MEASURE-027: memprof is excluded from CI gating.
memprof = ["dep:tikv-jemallocator"]

[dependencies]
# Core dependencies (used by most modules)
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "fs", "net", "sync", "time", "signal", "io-util"] }
blake3 = "1.5"
chrono = { version = "0.4", features = ["serde"] }
libc = "0.2"
dashmap = "5.5"

# Serialization
bincode = "1.3"

# Parse feature dependencies
tree-sitter = { version = "0.25", optional = true }
tree-sitter-python = { version = "0.25", optional = true }
tree-sitter-javascript = { version = "0.25", optional = true }
tree-sitter-typescript = { version = "0.23", optional = true }
tree-sitter-go = { version = "0.25", optional = true }
tree-sitter-rust = { version = "0.24", optional = true }
tree-sitter-java = { version = "0.23", optional = true }
tree-sitter-cpp = { version = "0.23", optional = true }
tree-sitter-c-sharp = { version = "0.23", optional = true }
tree-sitter-ruby = { version = "0.23", optional = true }
tree-sitter-php = { version = "0.24", optional = true }
tree-sitter-c = { version = "0.24", optional = true }
tree-sitter-bash = { version = "0.25", optional = true }
tree-sitter-json = { version = "0.24", optional = true }
tree-sitter-lua = { version = "0.5", optional = true }
tree-sitter-scala = { version = "0.25", optional = true }
# tree-sitter-kotlin = { version = "0.3", optional = true }  # Disabled due to tree-sitter version conflict
# tree-sitter-swift = { version = "0.7", optional = true }  # Disabled due to tree-sitter version conflict
# tree-sitter-dart = { version = "0.2", optional = true }  # Disabled due to tree-sitter version conflict
rayon = { version = "1.10", optional = true }
once_cell = { version = "1.19", optional = true }

# Graph feature dependencies
petgraph = { version = "0.7", features = ["serde"], optional = true }

# Storage feature dependencies
rusqlite = { version = "0.32", features = ["bundled"], optional = true }
libsql = { version = "0.5.0", optional = true }
rusqlite_migration = { version = "1.0.0", optional = true }

# Search feature dependencies
regex = { version = "1.10", optional = true }
hnsw_rs = { version = "0.3", optional = true }
lru = { version = "0.12", optional = true }
bytemuck = { version = "1.15", optional = true }
wide = { version = "0.7", optional = true }
unicode-normalization = { version = "0.1", optional = true }

# ONNX Runtime dependencies — delegated to the worker crate (VAL-CPHASE-002)
# The main crate depends only on the protocol types (no ONNX runtime deps).
# The worker binary enables the `onnx` feature separately.
leindex-embed = { version = "1.8.1", path = "crates/leindex-embed", optional = true, default-features = false }

# Remote embedding API dependencies (for cloud-based embeddings)
reqwest = { version = "0.12", features = ["json", "rustls-tls-webpki-roots", "gzip", "deflate"], optional = true, default-features = false }
async-trait = { version = "0.1", optional = true }

# PATH resolution for worker binary lookup (onnx feature)
which = { version = "5.0", optional = true }

# Phase/CLI/Global/Server/Edit feature dependencies
walkdir = { version = "2.5", optional = true }
notify = { version = "6.0", optional = true }

# CLI feature dependencies
clap = { version = "4.5", features = ["derive"], optional = true }
toml = { version = "0.8", optional = true }
dirs = { version = "5", optional = true }
sysinfo = { version = "0.36.1", default-features = false, features = ["system"], optional = true }
diffy = { version = "0.3", optional = true }
dialoguer = { version = "0.11", optional = true }

# Server feature dependencies (axum 0.7)
axum = { version = "0.7", features = ["ws"], optional = true }
tower = { version = "0.5", features = ["full"], optional = true }
tower-http = { version = "0.5", features = ["cors", "trace"], optional = true }
futures = { version = "0.3", optional = true }
tokio-tungstenite = { version = "0.21", optional = true }

# Shared async/streaming dependencies (used by both mcp-server and server features)
tokio-stream = { version = "0.1", optional = true }
futures-util = { version = "0.3", optional = true }
bytes = { version = "1", optional = true }

tempfile = { version = "3.13", optional = true }

# Search mmap embedding persistence
memmap2 = { version = "0.9", optional = true }

# Heap profiling allocator (opt-in memprof feature)
tikv-jemallocator = { version = "0.6", features = ["profiling", "unprefixed_malloc_on_supported_platforms"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"
tempfile = "3.13"
rstest = "0.23"
proptest = "1.6"
leindex-embed = { path = "crates/leindex-embed" }
rand = "0.8"

# Binary targets
[[bin]]
name = "leindex"
path = "src/bin/leindex.rs"
required-features = ["cli"]
doc = false

[[bench]]
name = "simd_benchmarks"
path = "benches/simd_benchmarks.rs"
harness = false
required-features = ["search"]

[[bench]]
name = "search_benchmarks"
path = "benches/search_benchmarks.rs"
harness = false
required-features = ["search"]

[[bench]]
name = "phase_bench"
path = "benches/phase_bench.rs"
harness = false
required-features = ["phase"]

[[bench]]
name = "edit_preview_bench"
path = "benches/edit_preview_bench.rs"
harness = false
required-features = ["edit"]

[[bench]]
name = "text_search_bench"
path = "benches/text_search_bench.rs"
harness = false

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = true

[profile.bench]
debug = true
[profile.release-debug]
inherits = "release"
debug = 2
strip = false

# ── Workspace ────────────────────────────────────────────────────────────────
[workspace]
members = [
    ".",
    "crates/leindex-embed",
    "tools/memcheck",
    "tools/xtask",
]

# Workspace-wide lint policy. Replaces the legacy `clippy.toml` arrays
# (`allow = [...]`, `deny = [...]`, `warn = [...]`), which clippy 1.96+ no
# longer parses (clippy.toml is now reserved for configuration thresholds,
# not lint levels). Per the Cargo `[lints]` RFC, lint levels live here and
# are inherited by every workspace member via `[lints] workspace = true`.
#
# Migration notes from the legacy file:
#   * The `allow = [...]` block is preserved 1:1 below; these mirror
#     in-source #[allow]s the codebase has always carried.
#   * The `deny = [...]` block kept only the lints the codebase is
#     universally clean under (across default, onnx, onnx-migraphx, and
#     all-features, including tests and benches). Lints such as
#     `print_stdout`/`unwrap_used`/`expect_used`/`panic`/
#     `needless_pass_by_value`/`float_cmp` had widespread pre-existing
#     usage (mostly in `src/cli/` where stdout printing is intentional,
#     and in tests where strict float equality is the correct semantic),
#     and were never actually enforced because the legacy clippy.toml
#     arrays were already rejected by clippy 1.96+. Re-introducing those
#     at `deny` would surface ~180 pre-existing violations, contradicting
#     the feature contract "No new clippy warnings introduced". These
#     lints remain at clippy's default level (`allow`, since they belong
#     to the `restriction`/`pedantic` groups). A follow-up can tighten
#     them in scoped #![deny] blocks after cleaning up the call sites.
#   * Legacy `commented_code` and `drop_ref` entries were dropped: neither
#     name resolves under clippy 1.96 (`drop_ref` was renamed away long
#     before 1.96 and `commented_code` is not a real clippy lint).
#   * The legacy `warn = [...]` block enabled the `pedantic`, `nursery`,
#     `cargo`, and `restriction` groups. Under clippy 1.96 those groups
#     now trip 50+ lints on idiomatic code (`indexing_slicing`,
#     `as_conversions`, `arithmetic_side_effects`, `integer_division`,
#     etc.). Since the legacy file was rejected before applying them,
#     re-introducing the group-level `warn` would surface those lints as
#     new warnings, again contradicting the feature contract. The default
#     clippy groups (`style`/`perf`/`complexity`/`correctness`) remain
#     active at their default `warn` level via `clippy::all`; no explicit
#     entry is needed for them.
[workspace.lints.clippy]
# ── Allowed — intentional codebase patterns (mirror in-source #[allow]) ──
too_many_arguments = "allow"        # CLI handlers carry rich context; counted
module_inception = "allow"          # Multiple crate roots intentionally mirror
result_unit_err = "allow"           # Registry operations surface cover Err(())
arc_with_non_send_sync = "allow"    # Tokio Mutex<Arc<...>> pattern
type_complexity = "allow"           # Rich filter builder types in handlers
new_without_default = "allow"       # Index query builders (no default meaningful)
should_implement_trait = "allow"    # Newtype around rusqlite types
manual_find = "allow"               # C# parser — tree-sitter query idiom
only_used_in_recursion = "allow"    # C# parser inherently recursive

# ── Denied — downward pressure: lints the codebase is currently clean ──
# under, so any new occurrence indicates a real regression.
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
bool_assert_comparison = "deny"
clone_on_copy = "deny"
equatable_if_let = "deny"
match_like_matches_macro = "deny"
single_match = "deny"
suspicious_else_formatting = "deny"

# Default clippy groups (style/perf/complexity/correctness) remain active at
# their default `warn` level via `clippy::all`; no override needed here.

# Root package inherits workspace lints.
[lints]
workspace = true
