[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "leindex"
version = "2.0.1"
description = "LeIndex: AI-powered code search and indexing system with MCP integration"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "scooter-lacroix"}
]
dependencies = [
    "aiofiles>=23.2.1",
    "aiohttp>=3.9.0",
    "mcp>=0.3.0",
    "pdfminer-six>=20250506",
    "psutil>=7.0.0",
    "pytest>=8.4.1",
    "python-docx>=1.2.0",
    "python-json-logger>=2.0.0",
    "pyyaml>=6.0.0",
    "lxml>=6.0.0",
    "duckdb>=1.0.0",  # Analytical database for fast queries on metadata
    "cffi>=1.17.0",
    "cryptography>=45.0.0",
    "pycparser>=2.22",
    "six>=1.17.0",
    "python-dateutil>=2.9.0",
    "urllib3>=2.5.0",
    "tantivy>=0.20.0", # Tantivy (Rust Lucene) full-text search backend - NEW PRIMARY
    "greenlet>=3.2.0",
    "mako>=1.3.0",
    "markupsafe>=3.0.0",
    "httpx>=0.28.1",
    # "leann>=0.3.5,<0.4.0",  # MOVED TO OPTIONAL: LEANN vector backend (has broken dependency chain)
    # CPU-only sentence-transformers - exclude GPU/CUDA dependencies
    "sentence-transformers>=2.2.0",
    "einops>=0.6.0",  # Required by CodeRankEmbed model for tensor operations
    "torch>=2.0.0", # Pin to stable CPU-compatible versions
    "numpy>=1.24.0",
    "pytest-asyncio>=1.3.0",
    "msgpack>=1.0.0",
]

# Optional dependencies for PostgreSQL backend
# Install with: pip install leindex[postgresql]
# Optional dependencies for LEANN vector backend
# Install with: pip install leindex[leann]
[project.optional-dependencies]
postgresql = [
    "sqlalchemy>=2.0.0",
    "alembic>=1.16.4",
    "psycopg2-binary>=2.9.10",
    "elasticsearch>=8.0.0,<9.0.0",  # Required for dual_write_read and postgresql_elasticsearch_only backends
    "elastic-transport>=8.17.0",  # Required by elasticsearch client
]
leann = [
    "leann>=0.3.5,<0.4.0",  # LEANN vector backend (storage-efficient alternative to FAISS)
    # Note: Requires leann-backend-hnsw which may not be on PyPI
]
all = [
    "leindex[postgresql,leann]",
]

# CRITICAL: CPU-only configuration - prevent CUDA/GPU packages
# This system is CPU/AMD-only and must NOT install NVIDIA packages
[tool.uv]
no-build-isolation = false
# PyPI as primary source
index-url = "https://pypi.org/simple/"
# CPU-only PyTorch index for torch packages
extra-index-url = ["https://download.pytorch.org/whl/cpu"]
# Allow uv to pick best version from any index (needed when same package exists in multiple indexes)
index-strategy = "unsafe-best-match"

# Explicitly block ALL GPU/CUDA packages using constraint-dependencies
constraint-dependencies = [
    # Block NVIDIA CUDA runtime packages
    "nvidia-cuda-runtime-cu12==0.0.0",
    "nvidia-cudnn-cu12==0.0.0",
    "nvidia-cublas-cu12==0.0.0",
    "nvidia-cufft-cu12==0.0.0",
    "nvidia-curand-cu12==0.0.0",
    "nvidia-cusolver-cu12==0.0.0",
    "nvidia-cusparse-cu12==0.0.0",
]

[project.urls]
Homepage = "https://github.com/scooter-lacroix/leindex"
"Bug Tracker" = "https://github.com/scooter-lacroix/leindex/issues"

[project.scripts]
leindex = "leindex.server:main"
leindex-search = "leindex.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[dependency-groups]
dev = [
    "mcp[cli]>=1.25.0",
]
