[package]
name = "legraphe"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Program Dependence Graph extraction, relinking, and traversal for LeIndex"
keywords = ["pdg", "graph", "analysis", "code-intelligence"]
categories = ["development-tools"]

[dependencies]
# Workspace dependencies
petgraph.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true

# Internal dependencies
leparse = { path = "../leparse", version = "0.1.0" }

[dev-dependencies]
rstest.workspace = true

[lib]
name = "legraphe"
crate-type = ["rlib"]
