[package]
name = "leindex-embed"
version = "1.8.1"
edition = "2021"
rust-version = "1.75"
authors = ["LeIndex Contributors"]
description = "ONNX embedding worker for LeIndex — runs neural embedding and reranking inference in a separate process"
license = "MIT"
repository = "https://github.com/scooter-lacroix/LeIndex"
homepage = "https://github.com/scooter-lacroix/LeIndex#readme"
build = "build.rs"

[features]
default = []

# Neural embeddings with ONNX Runtime and tokenizers
# Only needed for the worker binary, not for the main crate.
# The `migraphx` feature enables AMD GPU acceleration via MIGraphX,
# which is the modern replacement for the deprecated ROCmExecutionProvider.
#
# ort-sys does not ship prebuilt MIGraphX binaries, so when building with
# `onnx-migraphx`, set ORT_LIB_PATH to a directory containing a
# MIGraphX-enabled libonnxruntime.so and ORT_PREFER_DYNAMIC_LINK=1 to
# dynamically link against it instead of downloading the CPU-only prebuilt.
onnx = ["dep:ort", "dep:tokenizers", "dep:ndarray"]
onnx-migraphx = ["onnx", "ort/migraphx"]

[dependencies]
# Protocol serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ONNX Runtime dependencies — owned exclusively by the worker crate
# Use api-24 to match the struct layout of ORT 1.25.0 (onnxruntime-migraphx 1.25.0).
# ORT 1.25.0 has the 13-field OrtApi struct that ort-sys 2.0.0-rc.12 expects.
# The previous api-23 caused a struct layout mismatch segfault with ORT 1.23.2.
ort = { version = "2.0.0-rc.12", optional = true, default-features = false, features = ["ndarray", "std", "tracing", "download-binaries", "tls-native", "copy-dylibs", "api-24"] }
tokenizers = { version = "0.20", optional = true }
ndarray = { version = "0.17", optional = true }
dirs = { version = "5" }

[dev-dependencies]
tempfile = "3.13"

[[bin]]
name = "leindex-embed"
path = "src/bin/leindex-embed.rs"
doc = false

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = true
